python/testData/highlighting/typeAliasStatementBefore312.py
<error descr="Python version 3.11 does not support type alias statements"><info descr="null">type</info> myType[T] = <info descr="PY.BUILTIN_NAME">list</info>[T]</error>
